--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <canvas id="board">
-
         </canvas>
+
         <h1 id="highScore"></h1>
         <div id="stage-container">
             <button
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-
+    Hello
 </body>
 
 </html>
